firebase e rich text ok

--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@highcharts/dashboards": "^3.0.0",
+    "firebase": "^11.9.1",
+    "highcharts": "^12.0.2",
+    "highcharts-angular": "^4.0.1",
+    "jspdf": "^2.5.2",
     "ngx-mask": "^19.0.7",
+    "ngx-quill": "^26.0.10",
+    "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
