--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
-              "src/styles.scss"
+              "src/styles.scss",
+               "node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": []
           },
