--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@highcharts/dashboards": "^3.0.0",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.9.1",
     "highcharts": "^12.0.2",
     "highcharts-angular": "^4.0.1",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^18.2.19",
     "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
