--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/highcharts": "^5.0.44",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
