--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.14",
+    "@angular/material-moment-adapter": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
@@ -27,6 +28,7 @@
     "highcharts": "^12.0.2",
     "highcharts-angular": "^4.0.1",
     "jspdf": "^2.5.2",
+    "moment": "^2.30.1",
     "ngx-mask": "^19.0.7",
     "ngx-quill": "^26.0.10",
     "quill": "^2.0.3",
