--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@highcharts/dashboards": "^3.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
+    "@colsen1991/ngx-translate-extract-marker": "^3.0.1",
     "crypto-js": "^4.2.0",
     "firebase": "^10.14.1",
     "highcharts": "^12.0.2",
