--- a/angular.json
+++ b/angular.json
@@ -26,15 +26,13 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.scss",
-               "node_modules/quill/dist/quill.snow.css"
+              "node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": []
           },
