--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "quill-delta-to-html": "^0.12.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vanilla-tilt": "^1.8.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
